<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">班班通</string>
    
    <!-- button string resourcr -->
    <!-- herder button -->
    <string name="string_btn_back">返回</string>
    <string name="string_btn_ok">确认</string>
    <string name="string_btn_publish">发布</string>
    <string name="string_btn_member">成员</string>
    <string name="string_btn_chat">私聊</string>
    <string name="string_btn_home">首页</string>
    <string name="string_btn_zone">空间</string>
    <string name="string_btn_query">查询</string>
    
    <!-- other buutton -->
    <string name="string_btn_register">注册</string>
    <string name="string_btn_login">登录</string>

    <!-- hint string -->
    <string name="string_hint_login_id">手机号码/邮箱</string>
    <string name="string_hint_login_pwd">登录密码</string>
</resources>
